--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.182",
     "@types/uuid": "^8.3.4",
     "add": "^2.0.6",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "copyfiles": "^2.4.1",
+    "cors": "^2.8.5",
     "esm": "^3.2.25",
     "express": "^4.17.21",
     "http-status-codes": "^2.2.0",
