--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "build": "yarn schema-to-dist && tsc",
     "schema-to-dist": "copyfiles \"definitions/**/*\" dist",
     "start": "node dist/src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config=jest.config.js",
     "typecheck": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.1",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.40",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.16",
+    "ts-jest": "^28.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "^4.6.4"
   },
   "dependencies": {
